# golem_garden

./: .gitignore  404.html  CONTRIBUTING.md  Dockerfile  README.md  RUN_ME.py  api.py  docker-compose.yml  index.html  main.py  mkdocs.yml  old_pyproject.toml  pyproject.toml  requirements.txt  sample.env
.github/workflows/: deploy_docs.yml  publish_to_pypi_when_new_tag_is_pushed_to_main.yml
Community Guidelines/Code of Conduct/: index.html
Contributing guide/Contributing/: index.html
Contributing guide/python_style_guide/: index.html
docs/: api_reference.md  index.md
docs/Community Guidelines/: Code of Conduct.md
docs/Contributing guide/: Contributing.md  python_style_guide.md
docs/development/: minimal_style_guide.md  style_guide.md  style_guide_for_gpt.md
docs/notes/: bluesky_todos.md  pycharm_quickref.md
docs/user_guide/: installation.md
experimental/: Notebook_Companion_Embedding_as_a_Service.ipynb  hugging_face_sentence_transformer_embedding_ipynb.py  pinecone_open_ai_ada_embedding.py  sentence_transformer.py
experimental/Builder/: memory_util.py  multiplayer_dnd_example.py  npc_builder_chain.py
experimental/chunk_string/: chunk_string.py
experimental/jkl/: NPCBuilder.py  agent_config.py  conversation_stages.py  sales_agent_example.py
experimental/karl/: character_model.py  character_sheet_ingest.py
experimental/knowledge_corpus_embeddings/: string_chopper.py
experimental/sts/: testing_agent.ipynb
golem_garden/: __init__.py  __main__.py  config_database.py  context_database.py  database.py  golem_factory.py  golem_garden.py  golems.py  textual_tui.py  textual_user_interface.py  user_interface.py
golem_garden/api/: dummy_api.py  main.py
golem_garden/backend/: __main__.py  golem.py  main.py  openai_chat.py
golem_garden/database/: context_database.py  database.json  database_factory.py
golem_garden/frontend/: qt_frontend.py
golem_garden/golems/: config_database.py  document_editor.py  golem.py  golem_factory.py  golem_garden.py  golems.py
golem_garden/openai/: openai_api.py
golem_garden/system/: filenames_and_paths.py  get_formatted_timestamp.py
golem_garden/tests/: test_string_chopper.py
golem_garden/tools/: tools.py
golem_garden/user_interface/: command_line_interface.py  jupyter_widget.py
golem_garden/utlities/: openai_api.py  (+5 more)
jupyter_notebooks/: ask_freemocap_docs.ipynb  dog_mailer_auto_gpt.py  dog_mailer_baby_agi_with_agent.ipynb  dog_mascot_mailer_agent.ipynb  langchain_agent_playground.py  langchain_docs_baby_agi.ipynb  langchain_docs_baby_agi_with_agent.ipynb  langchain_playground.ipynb  langchain_semantic_search.ipynb  langchan_baby_agi.ipynb
notes/: bluesky_todos.md
search/: search_index.json
src/: __init__.py  __main__.py
stylesheets/: extra.css
system/: environment_variables.py  filenames_and_paths.py
tests/: test_database.py  test_golem_factor.py  test_golem_factory.py  test_golems.py  test_user_interface.py
utilities/: directory_printer.py  env_setup.bat  get_md_from_url.py  grab_all_py_in_one_text_block.py  pinecone.py  print_folder_and_files_structure.py  quine.py  try_mongo_connection.py  use_ast_to_walk_through_code.py  walk_through_code.py
utlities/: crawl_directory_and_print_files_functions_and_methods.py  grab_all_py_in_one_text_block.py
(+117 files in other folders)
