[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "golem_garden"
description = "A Golem Garden implementation to wrangle a menagerie of chatbots."
authors = [
    { name = "Jonathan Samir Matthis", email = "jonmatthis@gmail.com" },
]
license = { file = "LICENSE" }
[options]
packages = "find:"

dependencies = [
    "python-dotenv",
    "openai",
]

dynamic = ["version", "description"]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/jonmatthis/golem_garden"

[tool.bumpver]
current_version = "v0.2.0"

version_pattern = "vMAJOR.MINOR.PATCH[-TAG]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"golem_garden/__init__.py" = ["{version}"]

[tool.poetry.dependencies]
python = "^3.6"

[project.scripts]
golem_garden = "golem_garden.__main__:main"