# pyproject.toml
# originally based on - https://realpython.com/pypi-publish-python-package/

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "golem_garden"
readme = "README.md"
authors = [
    { name = "Jonathan Samir Matthis" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
]
keywords = [
    "chat"
]


dependencies = [
    "python-dotenv",
    "openai",
    "pymongo",
    "toml",
]
requires-python = ">=3.8"

dynamic = ["version", "description"]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/jonmatthis/golem_garden"

[tool.bumpver]
current_version = "v0.4.4"

version_pattern = "vMAJOR.MINOR.PATCH[-TAG]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]

"golem_garden/__init__.py" = ["{version}"]

[project.scripts]
golem_garden = "golem_garden.__main__:main"

