[tool.poetry]
name = "golem-garden"
version = "0.5.3"
description = "words in the heart cannot be taken 🌱"
authors = ["jonmatthis <jonmatthis@gmail.com>"]
license = "AGPLv3+"
readme = "README.md"
packages = [{ include = "golem_garden" }]

[project.urls]
Homepage = "https://github.com/jonmatthis/golem_garden"

requires-python = ">=3.8, <4"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.220"
python-dotenv = "^1.0.0"
openai = "^0.27.8"
motor = "^3.2.0"
chromadb = "^0.3.26"
tiktoken = "^0.4.0"
py-cord = "^2.4.1"
pynacl = "^1.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
bumpver = "^2023.1124"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

keywords = [
    "chat",
    "chatbot",
    "ai",
    "gpt",
    "discord",
    "telegram",
    "llm",
]


dynamic = ["version"]


[tool.bumpver]
current_version = "v0.5.3"

version_pattern = "vMAJOR.MINOR.PATCH[-TAG]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"golem_garden/__init__.py" = ["{version}"]
